--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <meta name="viewport" content="width=device-width" />
     <title>Cicada- Internet Mystery</title>
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
-    <link rel="icon" href="./css/style.css" type="image/x-icon" />
-
+    <link rel="stylesheet" href="./css/style.css" type="image/x-icon" />
+    <meta name="theme-color" content="#4285f4" />
+    <link rel="icon" href="./css/cicadamain.png" />
     <style>
       @import url("https://fonts.googleapis.com/css?family=Montserrat:100");
 
