--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Cicada- Internet Mystery</title>
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
     <link rel="stylesheet" href="./css/style.css" type="image/x-icon" />
-    <meta name="theme-color" content="#4285f4" />
+    <meta name="theme-color" content="#121212" />
     <link rel="icon" href="./css/cicadamain.png" />
     <style>
       @import url("https://fonts.googleapis.com/css?family=Montserrat:100");
