--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
           <div class="col-12 text-center mt-5">
             <a
               style="text-decoration: none"
-              href="https://cicada-3301.herokuapp.com"
+              href="https://cicada-3301.herokuapp.com/get-in/y0FIaZu4nS"
               id="get-button"
               class="btn1 draw-border"
               >Start</a
